# HyperTrader

./: .gitignore  README.md  find_link.py  pairs.json  test_order_id_fix.py  test_v10.py
backend/: .coverage  .coveragerc  .env.example  CORRECTED_IMPLEMENTATION.md  FRAGMENT_CALCULATION_FIX.md  LIVE_TEST_SUMMARY.md  MULTI_POSITION_UPDATE_FIX.md  MULTI_STRATEGY_COMMANDS.md  README.md  add_unit_size_migration.py  check_account_details.py  check_both_nets.py  check_orders.py  check_position.py  check_positions.py  check_positions_now.py  check_purr_market.py  close_position.py  close_purr_short.py  config.yaml  debug_auth.py  debug_market_info.py  debug_meta.py  debug_pos_fields.py  debug_positions.py  debug_positions_new.py  demo_trading.py  emergency_cleanup.py  hypertrader.py  main.py  monitor.py  monitor_strategy.py  pyproject.toml  recover_position.py  run_strategy.bat  run_strategy.sh  run_tests.py  sol_bot_log.txt  status.py  strategy_state.json  (+30 more)
backend/.claude/: settings.local.json
backend/app/: main.py
backend/docs/: alternative_limit_buy_solutions.md  cleanup_summary_2025_09_12.md  completion_summary.md  critical_fixes_2025_09_12.md  critical_fixes_applied_8-28.md  fixes_summary_sept_12_final.md  hedge_wallet_future.md  implementation_verification.md  limit_buy_order_analysis.md  main_issues.md  order_auditor_guide.md  position_map_issues.md  profit_tracking_guide.md  renaming_summary.md  restructuring_plan.md  short_position_fix_8-28.md  sliding_window_complete_fix.md  sliding_window_implementation_detailed.md  sliding_window_implementation_summary.md  strategy_alignment_complete_8-28.md
backend/reference-only/: sample_ccxt_hyperliquid_code.py  websocket.py
backend/scripts/: basic_commands.py  hl_commands.py  test_config.py  (+8 more)
(+221 files in other folders)
