[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "ccxt>=4.4.100",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.138.0",
    "pact>=1.12.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]