[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "eth-account>=0.13.7",
    "eth-utils>=5.3.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "hyperliquid-python-sdk>=0.18.0",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.35.0",
    "web3>=7.13.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.138.0",
    "pact>=1.12.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "asyncio: mark test as an asyncio coroutine"
]
